# mbi

./: .gitignore  .pydocstylerc  .pylintrc  README.md  pylint_output.txt  pylint_output_final.txt  pylint_output_final_2.txt  pylint_output_final_3.txt  pyproject.toml  pyrefly-baseline.json  pyrefly.toml  reproduce_issue.py  test_out.txt  verify_all_2way.py
.github/workflows/: main.yml  manual.yml
benchmarks/: benchmark.py  benchmark_marginals.py  benchmark_synthetic_data.py
docs/: installation.md  introduction.md
examples/: adult_example.py  benchmark_oracles.py  convergence.py  convergence_benchmark.py  evaluate_oracles.py  toy_example.py
mechanisms/: adaptive_grid.py  aim.py  cdp2adp.py  gaussian+appgm.py  hdmm+appgm.py  jam.py  mechanism.py  mst.py  mwem+pgm.py  workload_utils.py
src/mbi/: __init__.py  _api.py  callbacks.py  (+16 more)
test/: conftest.py  test_approximate_oracles.py  test_arbitrary_constraint.py  test_callbacks.py  test_clique_utils.py  test_clique_vector.py  test_constraint.py  test_dataset.py  test_deterministic.py  test_domain.py  test_einsum.py  test_estimation.py  test_ext_synthetic_data.py  test_factor.py  test_inf_handling.py  test_jax_dataset.py  test_junction_tree.py  test_marginal_loss.py  test_marginal_oracles.py  test_markov_random_field.py  test_mixture_of_products.py  test_model_summary.py  test_nan_potentials.py  test_precompile.py  test_precompute_marginals.py  test_reweighted_dataset.py  test_serialization.py  test_synthetic_data_chunking.py  test_timeout_fix.py  test_ve_evidence.py  test_workload_utils.py
tests/: test_dataset.py
(+10 files in other folders)
