[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mbi"
version = "1.3.0"
description = "Marginal-based estimation and inference (with applications to differential privacy)"
authors = [
    {name = "Ryan McKenna", email = "rmckenna21@gmail.com"},
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs",
    "numpy",
    "scipy",
    "networkx",
    "jax>=0.9.0",
    "jaxlib>=0.9.0",
    "chex",
    "optax",
]

[project.urls]
Homepage = "https://github.com/ryan112358/mbi"
Repository = "https://github.com/ryan112358/mbi"

[project.optional-dependencies]
dev = [
    "pytest",
    "pyrefly",
    "parameterized",
    "pyink",
    "pylint",
    "pydocstyle",
    "flake8",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyink]
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true
pyink-annotation-pragmas = [
    "noqa",
    "pylint:",
    "type: ignore",
    "pytype:",
    "pyrefly:",
    "mypy:",
]
